test/scc_test/expr/semantic-errors/039.a
039.t:4:9: error: expression must have arithmetic type